--- a/backend/templates/resetPassword/resetPasswordLink.html
+++ b/backend/templates/resetPassword/resetPasswordLink.html
@@ -13,8 +13,7 @@
               border="0"
               cellpadding="0"
               cellspacing="0"
-              class="btn btn-primary"
-            >
+              class="btn btn-primary">
               <tbody>
                 <tr>
                   <td align="left">
@@ -22,8 +21,7 @@
                       role="presentation"
                       border="0"
                       cellpadding="0"
-                      cellspacing="0"
-                    >
+                      cellspacing="0">
                       <tbody>
                         <tr>
                           <td>
@@ -38,7 +36,9 @@
                 </tr>
               </tbody>
             </table>
-            <p>If you cannot use the button, copy next link and paste in your browser 
+            <p>
+              If you cannot use the button, copy next link and paste in your
+              browser
               <a href="{{.URL}}" target="_blank"> {{.URL}}</a>
             </p>
             <p>Good luck! IT Virtuous CEO.</p>
