--- a/backend/templates/verificateAccount/base.html
+++ b/backend/templates/verificateAccount/base.html
@@ -13,8 +13,7 @@
       border="0"
       cellpadding="0"
       cellspacing="0"
-      class="body"
-    >
+      class="body">
       <tr>
         <td>&nbsp;</td>
         <td class="container">
